--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <title></title>
+    <title>\Technical Education for All</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1></h1>
+  <h1>Techcnical Education for All</h1>
+<img src="https://image.shutterstock.com/image-photo/tokyo-japan-feb-19-2017-260nw-668756629.jpg">
   </body>
 </html>
